--- a/angular-shell/src/styles.scss
+++ b/angular-shell/src/styles.scss
@@ -2,10 +2,11 @@ body {
   margin: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  background-color: var(--p-surface-50);
-  font-family: 'Inter var', Inter, system-ui, -apple-system, sans-serif;
+  background-color: var(--p-content-background);
   color: var(--p-text-color);
+  font-family: 'Inter var', Inter, system-ui, -apple-system, sans-serif;
   font-weight: 400;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .theme-menu {
